[package]
name = "bitsy-script"
version = "0.2.1"
edition = "2024"
authors = ["Gram <git@orsinium.dev>"]
description = "Interpreter for Bitsy scripting language"
repository = "https://github.com/orsinium-labs/bitsy-script"
license = "MIT"
keywords = ["bitsy"]
categories = ["no-std"]


[dependencies]
hashbrown = "0.16.1"
